--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Expensify</title>
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="/styles.css" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="/bundle.js"></script>
+</body>
+
+</html>
+
+<!--
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Expensify</title>
-  <link rel='icon' type="image/png" href="/favicon.png" />
+  <link rel='icon' type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
   <div id="app"></div>
@@ -13,3 +33,4 @@
  
 </body>
 </html>
+-->
